--- a/basics-assignment-2-start/src/app/app.component.html
+++ b/basics-assignment-2-start/src/app/app.component.html
@@ -15,5 +15,5 @@
 
 <button
   class="btn btn-primary"
-  [disabled]="!allowClick"
-  (click)="onButtonClick()">Button</button>
+  [disabled]="username === ''"
+  (click)="username = ''">Button</button>
