Solution of first four tasks

--- a/basics-assignment-3-start/src/app/app.component.html
+++ b/basics-assignment-3-start/src/app/app.component.html
@@ -8,6 +8,30 @@
         <li>Log all button clicks in an array and output that array below the secret paragraph (maybe log a timestamp or simply an incrementing number)</li>
         <li>Starting at the 5th log item, give all future log items a blue background (via ngStyle) and white color (ngClass)</li>
       </ol>
+
+      <button
+        class="btn btn-primary"
+        (click)="enableDisplay()">Display Details</button>
+
+      <p *ngIf="displayIsEnabled">
+        <br>
+        <label for="pw">Secret Password</label>
+        <input name="pw" type="password" value="tuna">
+      </p>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-6">
+            <p
+              *ngFor="let log of displayToggleLogs"
+              [ngStyle]="{backgroundColor: getBkgColor(log)}">{{log}}</p>
+          </div>
+          <div class="col-xs-6">
+            <p *ngFor="let logT of displayToggleLogsWithTimestamp">{{logT}}</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
