S2C8 Getting the Index when using ngFor

--- a/basics-assignment-3-start/src/app/app.component.html
+++ b/basics-assignment-3-start/src/app/app.component.html
@@ -21,14 +21,17 @@
 
       <div class="container">
         <div class="row">
+          <!--<div class="col-xs-6">-->
+            <!--<p-->
+              <!--*ngFor="let log of displayToggleLogs"-->
+              <!--[ngStyle]="{backgroundColor: getBkgColor(log)}"-->
+              <!--[ngClass]="{whiteBkg: getLogClass(log)}">{{log}}</p>-->
+          <!--</div>-->
           <div class="col-xs-6">
             <p
-              *ngFor="let log of displayToggleLogs"
-              [ngStyle]="{backgroundColor: getBkgColor(log)}"
-              [ngClass]="{whiteBkg: getLogClass(log)}">{{log}}</p>
-          </div>
-          <div class="col-xs-6">
-            <p *ngFor="let logT of displayToggleLogsWithTimestamp">{{logT}}</p>
+              *ngFor="let logT of displayToggleLogsWithTimestamp; let i = index"
+              [ngStyle]="{backgroundColor: getBkgColor(i)}"
+              [ngClass]="{whiteBkg: getLogClass(i)}">{{logT}}</p>
           </div>
         </div>
       </div>
