--- a/basics-assignment-1-start/src/app/app.component.html
+++ b/basics-assignment-1-start/src/app/app.component.html
@@ -9,6 +9,7 @@
       </ol>
       <p>Use external or internal templates and styles!</p>
       <p>Feel free to create more components, nest them into each other or play around with different types of selectors!</p>
+      <app-warning-alert></app-warning-alert>
     </div>
   </div>
 </div>
