--- a/cmp-databinding-assignment-start/src/app/app.component.html
+++ b/cmp-databinding-assignment-start/src/app/app.component.html
@@ -14,4 +14,10 @@
       </ol>
     </div>
   </div>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <app-game-control (intervalFired)="onIntervalFired($event)"></app-game-control>
+    </div>
+  </div>
 </div>
