--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -28,7 +28,8 @@
       </ul>
 
       <p appBasicHighlight>Style me with basic directive!</p>
-      <p appBetterHighlight="">Style me with a better directive!</p>
+      <!--<p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'">Style me with a better directive!</p>-->
+      <p [appBetterHighlight]="'red'" defaultColor="yellow">Style me with a better directive!</p>
     </div>
   </div>
 </div>
